src/components/blocks/banner/style.scss
@use '../../../styles/variables.scss';
@use '../../../styles/extends.scss';

.banner {
	@include extends.list_reset;
	margin-top: 40px;
	margin-bottom: 100px;

	blockquote {
		margin: 0;
	}

	.main {
		color: variables.$primary;
		font-family: variables.$font_heading;
		font-size: 1.5em;
		font-weight: 600;
		text-transform: uppercase;
	}

	.sub {
		color: #ffffff;

		li {
			list-style: disc;
		}
	}

	.btn {
		font-weight: 600;
	}

	.feature {
		max-width: 300px;
		margin: 0 auto;

		svg {
			@include extends.glow;
		}
	}

	&.image {
		padding-top: 80px;
		padding-bottom: 40px;

		blockquote {
			backdrop-filter: blur(50px);
			max-width: 400px;
			margin-left: auto;
			text-shadow: 1px 1px 1px #ffffff, -1px -1px 1px #ffffff;
		}

		.sub {
			color: variables.$primary;
		}

		.cta {
			text-shadow: none;
		}

		.plug {
			position: absolute;
			right: -30%;
			bottom: -100px;
			width: 1500px;

			svg {
				transform: scaleX(-1) rotate(-10deg);

				path {
					stroke-width: 7px;
					stroke: variables.$secondary;
				}
			}
		}

		.feature {
			position: absolute;
			z-index: -5;
			top: -40px;
			bottom: 0;
			left: 0;
			width: 100vw;
			max-width: unset;
			margin: 0;

			.gatsby-image-wrapper {
				width: 100%;
				height: 100%;
				object-fit: cover;
			}
		}
	}

	&.video {
		display: flex;
		flex-wrap: wrap;
		margin-top: 0;
		margin-bottom: 50px;

		.feature {
			order: -1;
			max-width: unset;
			margin: 0 auto;
		}

		.video-embed {
			margin: 0;

			svg {
				filter: none;

				path {
					filter: none;
				}
			}
		}

		.sub {
			color: variables.$main;
		}
	}

	&.image_blob  {
		display: flex;
		flex-wrap: wrap;
		margin-top: 0;

		.banner_squiggle {
			display: none;
			position: absolute;

			path {
				stroke: variables.$primary;
			}
		}

		.feature {
			max-width: 400px;
			// order: -1;
			margin-top: 30px;

			svg, path {
				filter: none;
			}

			path {
				stroke: variables.$primary;
			}
		}
	}
}

@media(min-width: 30em) {
	.banner {
		margin-bottom: 100px;
	}
}

@media(min-width: 40em) {
	.banner {
		display: flex;
		margin-top: 0;
		margin-bottom: 250px;

		.feature {
			flex-shrink: 0;
			width: 40vw;
			margin-left: 20px;
		}

		&.image {
			margin-bottom: 150px;
			padding-top: 150px;

			.feature {
				.gatsby-image-wrapper {
					object-position: left;
				}
			}

			blockquote {
				width: 30vw;
			}

			.main {
				margin-bottom: 0;
				font-size: 2em;
			}

			.sub {
				margin-top: 5px;
				font-size: 0.9em;
			}

			.plug {
				right: auto;
				left: -40px;
			}
		}

		&.video {
			.feature {
				width: auto;
			}

			blockquote {
				width: 80%;
				margin: 20px auto;
			}

			.video-embed {
				width: 50vw;
				max-width: 700px;
				height: 50vw * (9/16);
				max-height: 700px * (9/16);
			}
		}

		&.image_blob {
			margin-bottom: 100px;

			blockquote {
				// flex-shrink: 0;
				width: 60vw;
				max-width: 400px;
				margin: 0 0 0 auto;
			}

			.main {
				margin-top: 0;
			}

			.feature {
				// align-self: flex-end;
				// order: -1;
				width: 60vw;
				margin: 0;
				margin-top: -20px;
				margin-left: -50px;
			}
		}
	}
}

@media(min-width: 50em) {
	.banner {
		margin-bottom: 220px;

		blockquote {
			width: 40vw;
			max-width: 300px;
		}

		.feature {
			width: 50vw;
			max-width: 350px;
			margin: 0 auto;
		}

		&.image {
			margin-bottom: 120px;
			padding-top: 200px;
			padding-bottom: 100px;

			.feature {
				left: 0;
			}

			.cta {
				margin-top: 10px;
			}
		}

		&.video {
			flex-wrap: nowrap;
			align-items: center;
			margin-top: 40px;

			blockquote {
				flex-shrink: 1;
				align-self: flex-end;
				max-width: 400px;
				margin-bottom: 0;
			}

			.feature {
				align-self: flex-start;
				width: auto;
				margin: 0 20px 0 0;
			}

			.video-embed {
				width: 50vw;
				max-width: 700px;
				height: 50vw * (9/16);
				max-height: 700px * (9/16);
			}
		}

		&.image_blob {
			flex-wrap: nowrap;
			justify-content: flex-end;
			margin-bottom: 200px;

			blockquote {
				// flex-shrink: 0;
				width: 310px;
				margin-left: 0;

				.main {
					font-size: 1.4em;
				}
			}

			.banner_squiggle {
				display: block;
			}

			.feature {
				align-self: flex-end;
				order: -1;
				width: 60vw;
				max-width: 350px;
				margin: 0;
				transform: translateY(100px) translateX(-15px);
			}

			@media(min-width: 870px) {
				justify-content: center;

				blockquote {
					width: 300px;
					margin-left: 30px;
				}

				.feature {
					max-width: 400px;
					transform: translateY(120px) translateX(0);
				}
			}
		}
	}
}

@media(min-width: 60em) {
	.banner {
		justify-content: center;
		margin-bottom: 250px;

		.feature {
			margin: 0 0 0 50px;
		}

		&.graphic {
			.feature {
				width: 60vw;
				max-width: 400px;
			}
		}

		&.image {
			margin-bottom: 120px;
			padding-top: 300px;
			padding-bottom: 100px;

			blockquote {
				width: 25vw;
			}

			.main {
				font-size: 2.5em;
			}

			.plug {
				left: -50px;
				width: 2000px;

				svg {
					path {
						stroke-width: 5px;
					}
				}
			}
		}

		&.video {
			.feature {
				align-self: center;
				margin-right: 50px;
			}

			.feature {
				align-self: center;
			}

			.video-embed {
				width: 50vw;
				height: 50vw * (9/16);
			}
		}

		&.image_blob {
			margin-bottom: 300px;

			blockquote {
				width: 30vw;
			}

			.feature {
				width: 500px;
				max-width: unset;
				transform: translateY(110px) translateX(-20px);
			}
		}
	}
}

@media(min-width: 70em) {
	.banner {
		margin-bottom: 250px;

		.feature {
			max-width: 400px;
		}

		&.graphic {
			.feature {
				width: 500px;
				max-width: 700px;
			}
		}

		&.image {
			margin-bottom: 100px;
			padding-bottom: 200px;

			.plug {
				bottom: -120px;
				left: -50px;
			}
		}

		&.video {
			padding: 0 7vw;

			.feature {
				margin-right: 50px;
			}

			.video-embed {
				width: 60vw;
				height: 60vw * (9/16);
			}
		}

		&.image_blob {
			blockquote {
				margin-top: 50px;
			}

			.feature {
				transform: translateY(150px) translateX(-20px);
			}
		}
	}
}

@media(min-width: 80em) {
	.banner {
		margin-bottom: 300px;

		&.graphic {
			.feature {
				width: 600px;
				margin-top: -60px;
				margin-left: 100px;
			}
		}

		&.image {
			padding-top: 350px;

			.plug {
				bottom: -180px;
				left: -50px;
				width: 2500px;

				svg {
					transform: scaleX(-1) rotate(-15deg);

					path {
						stroke-width: 4px;
					}
				}
			}
		}

		&.video {
			justify-content: center;

			blockquote {
				margin-top: 100px;
			}

			.feature {
				margin-right: 80px;
			}
		}

		&.image_blob {
			align-items: center;

			blockquote {
				flex-shrink: 0;
				width: 450px;
				max-width: unset;
				margin: 0;
				margin-top: -70px;

				.main {
					font-size: 1.8em;
				}
			}

			.feature {
				width: 700px;
				transform: translateY(80px) translateX(-40px);
			}
		}
	}
}

@media(min-width: 85em) {
	.banner {
		&.image {
			padding-right: calc(50vw - 600px);

			blockquote {
				max-width: 300px;
			}
		}

		&.video {
			padding: 0 calc(50vw - 550px) 0;
		}

		&.image_blob {
			.feature {
				transform: translateY(80px) translateX(0);
			}
		}
	}
}

